# genson-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  comparison.json
.github/workflows/: codspeed_bench.yml  rust.yml
benches/: build_schema_bench.rs
src/: builder.rs  lib.rs  main.rs  node.rs
src/strategy/: array.rs  base.rs  mod.rs  object.rs  scalar.rs
tests/: test_builder.rs  test_node.rs
tests/data/: bench.sh  json_gen.py
