[package]
name = "genson-rs"
version = "0.1.0"
edition = "2021"
description = "Extremely fast JSON Schema inference engine built in Rust"
homepage = "https://github.com/junyu-w/genson-rs"
repository = "https://github.com/junyu-w/genson-rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["json", "schema", "inference", "genson", "serde", "simd"]
categories = ["command-line-utilities", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
mimalloc = "0.1.41"
rayon = "1.10.0"
regex = "1.10.4"
serde_json = "1.0.116"
simd-json = "0.13.10"

[dev-dependencies]
codspeed-criterion-compat = "2.6.0"
criterion = "0.3"

[[bench]]
name = "build_schema_bench"
harness = false
